--- a/package.json
+++ b/package.json
@@ -6,17 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
+    "@amplitude/analytics-node": "^1.3.6",
+    "dexie": "^4.0.7",
+    "fake-indexeddb": "^6.0.0",
+    "gh-pages": "^6.1.1",
+    "idb": "^8.0.0",
+    "indexeddb": "^0.0.0",
+    "next": "^14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "eslint-config-next": "14.2.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
