--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@amplitude/analytics-node": "^1.3.6",
+    "@amplitude/experiment-node-server": "^1.9.0",
     "@amplitude/session-replay-browser": "^1.9.1",
     "dexie": "^4.0.7",
     "fake-indexeddb": "^6.0.0",
