--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@amplitude/analytics-node": "^1.3.6",
     "@amplitude/experiment-node-server": "^1.9.0",
-    "@amplitude/session-replay-browser": "^1.9.1",
+    "@amplitude/session-replay-browser": "^1.13.1",
+    "@rudderstack/analytics-js": "^3.7.12",
+    "@rudderstack/rudder-sdk-node": "^2.0.10",
     "dexie": "^4.0.7",
+    "dotenv": "^16.4.5",
     "fake-indexeddb": "^6.0.0",
     "gh-pages": "^6.1.1",
     "idb": "^8.0.0",
